force-app/main/default/objects/Revenue_by_Organisation__c/Revenue_by_Organisation__c.object-meta.xml
<CustomObject>
    <description>Contains the rolled up summary of target and revenue amounts for the organisation as a whole (across all billing accounts and products)</description>
    <label>Revenue by Organisation</label>
    <nameField>
        <displayFormat>RevOrg-{0000000}</displayFormat>
        <label>Revenue Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue by Organisation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>