force-app/main/default/objects/Revenue_by_Organisation__c/fields/CurrentYear__c.field-meta.xml
<CustomField>
    <fullName>CurrentYear__c</fullName>
    <description>Current year flag checked for this financial year</description>
    <formula>IF(Current_Last_Year__c=&apos;THIS YEAR&apos;, true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True when current year is this FY</inlineHelpText>
    <label>Current-Year</label>
    <type>Checkbox</type>
</CustomField>