force-app/main/default/objects/Revenue_by_Organisation__c/fields/FY_First_Half_Revenue__c.field-meta.xml
<CustomField>
    <fullName>FY_First_Half_Revenue__c</fullName>
    <description>Contains the Revenue for the first half of the financial year (Q1 + Q2)</description>
    <formula>Q1_Revenue__c +  Q2_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FY First Half Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>