force-app/main/default/objects/Revenue_by_Organisation__c/fields/Jul_Revenue_Amount__c.field-meta.xml
<CustomField>
    <fullName>Jul_Revenue_Amount__c</fullName>
    <description>Revenue Amount for Month of July</description>
    <label>Jul Revenue Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>