force-app/main/default/objects/Revenue_by_Organisation__c/fields/Jul_Target_Amount__c.field-meta.xml
<CustomField>
    <fullName>Jul_Target_Amount__c</fullName>
    <description>Target amount for month of July. Previous name was &quot;Jul Target Amount&quot; (MW0003520).</description>
    <label>Jul Planned Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>