force-app/main/default/objects/Revenue_by_Organisation__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <description>Organisation to which the revenue record belongs to.</description>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Revenue by Organisation</relationshipLabel>
    <relationshipName>Revenue_by_Organisation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>