force-app/main/default/objects/Revenue_by_Organisation__c/fields/Q1_Target__c.field-meta.xml
<CustomField>
    <fullName>Q1_Target__c</fullName>
    <description>Target Amount for Q1. Previous name was &quot;Q1 Target Amount&quot; (MW0003520).</description>
    <label>Q1 Planned Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>